[gd_scene load_steps=8 format=2]

[ext_resource path="res://Character/Player.gd" type="Script" id=1]
[ext_resource path="res://Character/player_hold_object.gd" type="Script" id=2]
[ext_resource path="res://Character/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/main_character/spirteframes.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Character/PlayerSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://Character/Emote.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.5
height = 47.0

[node name="JAE" type="KinematicBody2D"]
position = Vector2( 10880, 5080 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="OjectifEmote" parent="." instance=ExtResource( 6 )]
position = Vector2( 1, -260 )
animation = "triangle_red_left"
frame = 2

[node name="Sprite" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -70 )
scale = Vector2( 1.3, 1.3 )
frames = ExtResource( 4 )
animation = "idle"
playing = true
offset = Vector2( 180, -60 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -80 )
offset = Vector2( 0, -80 )
current = true
script = ExtResource( 3 )

[node name="Hold_object" type="Node2D" parent="."]
position = Vector2( 0, -120 )
script = ExtResource( 2 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="Hold_object" method="_on_Sprite_frame_changed"]
